@@ -1,3 +1,6 @@
+2010-05-05
+* add simple checks for iptables, iproute, dproxy, ez-ipupdate
+
 2010-05-04
 * small speedup for BusyBox (40 characters should be enough for the BusyBox
 version number)
